# RISC-V-CPU

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: alu.sv  assembler.cpp  cpu.v  cpu_pkg.sv  cpu_top.sv  decoder.sv  imm_gen.sv  instr_mem.sv  pc_reg.sv  program.asm  program.hex  register_file.sv  sim_main.cpp  sim_main.cpp.bak
